--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
     <div class="parallax-container">
     <div class="parallax">
-      <img src="images/nebula-dark.jpg" class="img responsive-img parallaxImage"></div>
+      <img src="images/nebula-dark.png" class="img responsive-img parallaxImage"></div>
   </div>
 
   <div class="section black">
@@ -72,7 +72,7 @@
   </div>
 
   <div class="parallax-container">
-    <div class="parallax"><img src="images/nebula-dark.jpg" class="img responsive-img parallaxImage center-align"></div>
+    <div class="parallax"><img src="images/nebula-dark.png" class="img responsive-img parallaxImage center-align"></div>
   </div>
 
 <!--  <div class="section black lighten-1">
@@ -111,7 +111,7 @@
   </div>
 
     <div class="parallax-container">
-      <div class="parallax"><img src="images/nebula-dark.jpg" class="img responsive-img parallaxImage"></div>
+      <div class="parallax"><img src="images/nebula-dark.png" class="img responsive-img parallaxImage"></div>
     </div>
 <script>
   var options = [
