--- a/public/signup.html
+++ b/public/signup.html
@@ -327,8 +327,9 @@
 }); 
 
 </script>
- 
-<script type="text/javascript" src="js/signup.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <script type="text/javascript" src="js/signup.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/1.1.0/granim.js"></script>
 
 
