removed uneeded files

--- a/public/signup.html
+++ b/public/signup.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->  
+    <script type="text/javascript" src="js/signup.js"></script>
    <!--  background -->
   <div id="particles-js"></div>
 
@@ -98,8 +100,7 @@
     </div>
   </footer>
 <!-- *********** END FOOTER *********** -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <script type="text/javascript" src="js/signup.js"></script>
+
 
 </body>
 </html> 
