--- a/public/login.html
+++ b/public/login.html
@@ -16,7 +16,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
+  
+<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->  
+  <script type="text/javascript" src="js/login.js"></script>
   <!--Custom CSS-->
   <link href="css/style.css" rel="stylesheet">
 
@@ -96,8 +98,6 @@
   </footer>
 <!-- ************* END FOOTER ************* -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
 
 </body>
 </html> 
