adding cdns (public)

--- a/public/forgot.html
+++ b/public/forgot.html
@@ -92,7 +92,7 @@
 </body>
 </html> 
 <!--************  Start of JS  *************** -->
-<!-- <script type='text/javascript' src='config.js'></script> -->
+<script type='text/javascript' src='config.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" >
    
@@ -226,7 +226,8 @@ form {
 
 <!-- ********* Background ******************** -->
   <canvas id="canvas-image"></canvas>
-  <script src="js/granim.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/1.1.0/granim.js"></script>
+
   <script>
 
   particlesJS("particles-js", {
