--- a/public/reset.html
+++ b/public/reset.html
@@ -220,7 +220,7 @@ form {
 
 <!-- ********* Background ******************** -->
   <canvas id="canvas-image"></canvas>
-  <script src="js/granim.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/1.1.0/granim.js"></script>
   <script>
 
   particlesJS("particles-js", {
