--- a/public/forgotMessage.html
+++ b/public/forgotMessage.html
@@ -161,7 +161,8 @@
   
   <!-- ********* Background ******************** -->
   <canvas id="canvas-image"></canvas>
-  <script src="js/granim.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/1.1.0/granim.js"></script>
+
   <script>
 
     particlesJS("particles-js", {
