--- a/public/login.html
+++ b/public/login.html
@@ -16,9 +16,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  
-<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->  
-  <script type="text/javascript" src="js/login.js"></script>
+
   <!--Custom CSS-->
   <link href="css/style.css" rel="stylesheet">
 
@@ -35,6 +33,7 @@
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="/meditate">Meditate</a></li>
     <li><a href="/moodmap">Map</a></li>
+    <li><a href="/meanings">Meanings</a></li>
   </ul>
   <nav>
       <div class="nav-wrapper black">
@@ -97,8 +96,6 @@
     </div>
   </footer>
 <!-- ************* END FOOTER ************* -->
-
-
 </body>
 </html> 
 <!-- *************************************** -->
@@ -207,8 +204,7 @@ form {
   <!-- ********* Background ******************** -->
 
   <canvas id="canvas-image"></canvas>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/1.1.0/granim.js"></script>
-
+ <!--  <script src="js/granim.js"></script> -->
   <script>
 
   particlesJS("particles-js", {
@@ -340,3 +336,7 @@ form {
 }); 
 
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/granim/1.1.0/granim.js"></script>
+
