--- a/public/about/about.html
+++ b/public/about/about.html
@@ -21,38 +21,54 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!-- Cusotm CSS -->
       <link href="about.css" rel="stylesheet">
-</head>
-<body>
-  <body> 
-  <!-- *********** NAVBAR *********** -->
+       <script> 
+        $(document).ready(function(){
+          $('.dropdown-button').dropdown(); 
+          $(".button-collapse").sideNav();
+          $('.parallax').parallax();
+        });
+      </script>
+    </head>
+    <body>
+      <!-- *********** NAVBAR *********** -->
 
-  <!-- NavBar Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
-    <li><a href="/meditate">Meditate</a></li>
-    <li><a href="/moodmap">Map</a></li>
-    <!-- <li class="divider"></li> -->
-    <!-- <li><a href="/memos">Memos</a></li> -->
-  </ul>
-  <nav>
-      <div class="nav-wrapper black">
-        <a href="/" class="brand-logo center">N E B U L \</a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-    <!-- Dropdown Trigger -->
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">menu</i></a></li>
-          <li><a href="/members">MOODS</a></li>
-          <li><a href="/missions">MISSIONS</a></li>
-          <li><a href="/memos">MEMOS</a></li>
-        </ul>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <!-- <li><a href="#">SIGNUP</a></li> -->
-          <li><a href="/about">ABOUT</a></li>
-          <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
-          <li><a href="/logout"><i class="material-icons">clear</i></a></li>
-        </ul>
-      </div>
-    </nav>
-  <br>
-  <!-- *********** END NAVBAR *********** -->
+      <!-- NavBar Dropdown Structure -->
+      <ul id="dropdown1" class="dropdown-content">
+          <li><a href="/meditate">Meditate</a></li>
+          <li><a href="/moodmap">Map</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="/members">MOODS</a></li>
+        <li><a href="/missions">MISSIONS</a></li>
+        <li><a href="/memos">MEMOS</a></li>
+        <li><a href="/meditate">MEDITATE</a></li>
+        <li><a href="/moodmap">MAP</a></li>
+        <li><a href="/about">ABOUT</a></li>
+        <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
+        <li><a href="/logout"><i class="material-icons">clear</i></a></li>
+        <li><a href="/"><i class="material-icons">blur_on</i></a></li>
+      </ul>
+      <nav>
+          <div class="nav-wrapper black">
+            <a href="/" class="brand-logo center"><i class="material-icons">dot</i></a>
+
+            <ul id="nav-mobile-left" class="left hide-on-med-and-down">
+              <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons">menu</i></a></li>
+              <li><a href="/members">MOODS</a></li>
+              <li><a href="/missions">MISSIONS</a></li>
+              <li><a href="/memos">MEMOS</a></li>
+            </ul>
+            <ul id="nav-mobile-right" class="right hide-on-med-and-down">
+              <li><a href="/about">ABOUT</a></li>
+              <li><a href="/login">LOGIN<i class="material-icons">person_outline</i></a></li>
+              <li><a href="/logout">LOGOUT<i class="material-icons">clear</i></a></li>
+            </ul>
+            <!-- Mobile -->
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">dialpad</i></a>
+          </div>
+        </nav>
+
+      <!-- *********** END NAVBAR *********** -->
   <div id="main"></div>
   <!-- *********** FOOTER *********** -->
     <footer class="footer page-footer black">
