--- a/public/index.html
+++ b/public/index.html
@@ -15,59 +15,57 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js" rel="stylesheet" ></script>
     <link href="landing.css" rel="stylesheet">  
 
-    <script> 
-    $(document).ready(function(){
-      $('.dropdown-button').dropdown(); 
-      $(".button-collapse").sideNav();
-      $('.parallax').parallax();
-    });
-  </script>
-</head>
-<body>
-  <!-- *********** NAVBAR *********** -->
+      <script> 
+      $(document).ready(function(){
+        $('.dropdown-button').dropdown(); 
+        $(".button-collapse").sideNav();
+        $('.parallax').parallax();
+      });
+    </script>
+  </head>
+  <body>
+    <!-- *********** NAVBAR *********** -->
 
-  <!-- NavBar Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
-      <li><a href="/meditate">Meditate</a></li>
-      <li><a href="/moodmap">Map</a></li>
-  </ul>
-  <ul class="side-nav" id="mobile-demo">
-    <li><a href="/members">MOODS</a></li>
-    <li><a href="/missions">MISSIONS</a></li>
-    <li><a href="/memos">MEMOS</a></li>
-    <li><a href="/meditate">MEDITATE</a></li>
-    <li><a href="/moodmap">MAP</a></li>
-    <li><a href="/about">ABOUT</a></li>
-    <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
-    <li><a href="/logout"><i class="material-icons">clear</i></a></li>
-    <li><a href="/"><i class="material-icons">blur_on</i></a></li>
-  </ul>
-  <nav>
-      <div class="nav-wrapper black">
-        <a href="/" class="brand-logo center"><i class="material-icons">dot</i></a>
+    <!-- NavBar Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="/meditate">Meditate</a></li>
+        <li><a href="/moodmap">Map</a></li>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
+      <li><a href="/members">MOODS</a></li>
+      <li><a href="/missions">MISSIONS</a></li>
+      <li><a href="/memos">MEMOS</a></li>
+      <li><a href="/meditate">MEDITATE</a></li>
+      <li><a href="/moodmap">MAP</a></li>
+      <li><a href="/about">ABOUT</a></li>
+      <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
+      <li><a href="/logout"><i class="material-icons">clear</i></a></li>
+      <li><a href="/"><i class="material-icons">blur_on</i></a></li>
+    </ul>
+    <nav>
+        <div class="nav-wrapper black">
+          <a href="/" class="brand-logo center"><i class="material-icons">dot</i></a>
 
-        <ul id="nav-mobile-left" class="left hide-on-med-and-down">
-          <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons">menu</i></a></li>
-          <li><a href="/members">MOODS</a></li>
-          <li><a href="/missions">MISSIONS</a></li>
-          <li><a href="/memos">MEMOS</a></li>
-        </ul>
-        <ul id="nav-mobile-right" class="right hide-on-med-and-down">
-          <li><a href="/about">ABOUT</a></li>
-          <li><a href="/login">LOGIN<i class="material-icons">person_outline</i></a></li>
-          <li><a href="/logout">LOGOUT<i class="material-icons">clear</i></a></li>
-        </ul>
-        <!-- Mobile -->
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">dialpad</i></a>
-      </div>
-    </nav>
+          <ul id="nav-mobile-left" class="left hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons">menu</i></a></li>
+            <li><a href="/members">MOODS</a></li>
+            <li><a href="/missions">MISSIONS</a></li>
+            <li><a href="/memos">MEMOS</a></li>
+          </ul>
+          <ul id="nav-mobile-right" class="right hide-on-med-and-down">
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
+            <li><a href="/logout"><i class="material-icons">clear</i></a></li>
+          </ul>
+          <!-- Mobile -->
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">dialpad</i></a>
+        </div>
+      </nav>
 
-  <!-- *********** END NAVBAR *********** -->
-
+    <!-- *********** END NAVBAR *********** -->
     <div class="parallax-container">
-    <div class="parallax">
-      <img src="images/nebula-dark.png" class="img responsive-img parallaxImage"></div>
-  </div>
+      <div class="parallax"><img src="images/nebula-dark.png" class="img responsive-img parallaxImage"></div>
+    </div>
 
   <div class="section black">
     <div class="row container white-text">   
@@ -85,9 +83,9 @@
     </div>
   </div>
 
-  <div class="parallax-container">
-    <div class="parallax"><img src="images/nebula-dark.png" class="img responsive-img parallaxImage center-align"></div>
-  </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="images/nebula-dark.png" class="img responsive-img parallaxImage"></div>
+    </div>
 
 <!--  <div class="section black lighten-1">
   <div class="row container white-text text-center"><br>
