--- a/public/members/members.html
+++ b/public/members/members.html
@@ -60,8 +60,8 @@
        </ul>
        <ul id="nav-mobile-right" class="right hide-on-med-and-down">
          <li><a href="/about">ABOUT</a></li>
-         <li><a href="/login">LOGIN<i class="material-icons">person_outline</i></a></li>
-         <li><a href="/logout">LOGOUT<i class="material-icons">clear</i></a></li>
+         <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
+         <li><a href="/logout"><i class="material-icons">clear</i></a></li>
        </ul>
        <!-- Mobile -->
        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">dialpad</i></a>
