--- a/public/meditate/meditate.html
+++ b/public/meditate/meditate.html
@@ -27,9 +27,17 @@
   .breathe-rate {
     z-index: 5 !important;
   }
+  audio {
+    opacity: .4;
+    margin-bottom: -80px;
+  }
 </style>
 </head>
 <body>
+  <audio controls>
+    <source src="music.mp3" type="audio/mpeg";>
+    Your browser does not support the audio tag.
+  </audio>
   <!-- *********** NAVBAR *********** -->
 
   <!-- NavBar Dropdown Structure -->
