--- a/public/meditate/meditate.html
+++ b/public/meditate/meditate.html
@@ -3,41 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <title>NEBUL\  | Meditate</title>
+
     <!-- Latest compiled and minified CSS ~ Bootstrap-->
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <!--jQuery 3.2.1 --> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- jQuery CDN -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script> 
+    <!--  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>  -->
     <!--  Google Materialize Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS ~ Materialize -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet" >
     <!-- Compiled and minified JS ~ Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js" rel="stylesheet" ></script>
+    <script src="meditate.js" type="text/javascript"></script>
     <!-- Custom CSS -->
     <link href="meditate.css" rel="stylesheet">  
-
-    <script> 
-    $(function(){
-      $(".dropdown-button").dropdown(); 
-      $(".button-collapse").sideNav();
-      // $('.parallax').parallax();
-    });
-  </script>
   <style>
   .breathe-rate {
     z-index: 5 !important;
   }
-  audio {
-    opacity: .4;
-    margin-bottom: -80px;
+  audio, .tap-target {
+    opacity: .2;
   }
 </style>
 </head>
 <body>
-  <audio controls>
-    <source src="music.mp3" type="audio/mpeg";>
-    Your browser does not support the audio tag.
-  </audio>
   <!-- *********** NAVBAR *********** -->
 
   <!-- NavBar Dropdown Structure -->
@@ -76,63 +66,52 @@
       </div>
     </nav>
   <!-- *********** END NAVBAR *********** -->
-  <div class="container">
-    <div class="row">
-      <form class="col s1 offset breathe-rate">
-        <input class="duration-select" id="s1" max="120" min="1" name="duration" step="1" type="number" value="5"> 
-      </form>
+<br>
+<div class="container">
+<!-- <div class="row inline left-align"> -->
+  <!-- Instruction Feature Container -->
+  <!-- <a class="instruction btn-floating btn-sm waves-effect waves-light deep-purple darken-2 icon-btn btn tooltipped" data-html="true" data-delay="150" data-position="bottom" data-tooltip="<strong>M E D I T A T E</strong><hr><small> Visualization is a very useful technique for stress reduction. <br>Start by taking deep breaths in through your nose, exhaling through your mouth. <br>Focus on deep breathing, filling your belly with air. <br>Adjust the pulse tempo to match your breath if you find it too fast or slow. <br>You can also move the cursor to learn how the nebula webs react. <br><br>When you are ready, adjust your breathing and fixate the cursor at the center of the screen. <br>Watch as the webs starts to collopse into a circle. Imagine that this circle is your stress. <br><br>Watch as it slowly builds and accumulates on top of previous stress. <br>Notice how tense the circle becomes. <br>After a few moments, swipe the cursor off the canvas. <br>Watch as the circle dissipates away and imagine it as your stress. <br>Repeat this as many times as you like and take any liberties you wish.</small>"<i class="material-icons">?</i>
+  </a> -->
+  <!-- END Instruction Feature Container -->
+
+
+    <div class="row right-align"><br><br>
+       <!-- Instructions -->
+        <a class="instruction btn-floating waves-effect waves-light grey darken-3 icon-btn btn tooltipped left-align" data-html="true" data-delay="150" data-position="bottom" data-tooltip="<strong>M E D I T A T E</strong><hr><small> Visualization is a very useful technique for stress reduction. <br>Start by taking deep breaths in through your nose, exhaling through your mouth. <br>Focus on deep breathing, filling your belly with air. <br>Adjust the pulse tempo to match your breath if you find it too fast or slow. <br>You can also move the cursor to learn how the nebula webs react. <br><br>When you are ready, adjust your breathing and fixate the cursor at the center of the screen. <br>Watch as the webs starts to collopse into a circle. Imagine that this circle is your stress. <br><br>Watch as it slowly builds and accumulates on top of previous stress. <br>Notice how tense the circle becomes. <br>After a few moments, swipe the cursor off the canvas. <br>Watch as the circle dissipates away and imagine it as your stress. <br>Repeat this as many times as you like and take any liberties you wish.</small>"<i class="material-icons">?</i>
+        </a>
+        <br><br>
+      <!-- Breathing rate input -->
+        <input class="duration-select breathe-rate" style=" width:5%; height:5%" id="s1" max="120" min="1" name="duration" step="1" type="number" value="5"> 
+        <br><br><br>
+      <!-- Audio tag -->
+      <audio controls autoplay loop preload="auto" style=" width:5%; height:5%">
+        <source src="music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      
     </div>
-    <div class="row left-align">
-        <div class="col s3 offset">
-          <ul class="meditation-instructions" id="instruct-a">
-          <li>Visualization is a very useful technique for stress reduction.</li>
-          <li>
-            Start by taking deep breaths in through your nose, exhaling through your mouth.
-            
-            Focus on deep breathing, filling your belly with air. Adjust the pulse tempo to match your breath if you find it too fast or slow.
+</div>
 
-            You can also move the cursor to learn how the nebula webs react.
-          </li>
-
-            <li>
-            When you are ready, adjust your breathing and fixate the cursor at the center of the screen.
-
-            Watch as the webs starts to collopse into a circle.
-
-            Imagine that this circle is your stress.
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row left-align">
-        <div class="col s3 offset">
-          <ul class="meditation-instructions" id="instruct-b">
-          <li>
-            Watch as it slowly builds and accumulates on top of previous stress.
-
-            Notice how tense the circle becomes.
-
-            After a few moments, swipe the cursor off the canvas.
-
-            Watch as the circle dissipates away and imagine it as your stress.
-          </li>
-          <li>
-            Repeat this as many times as you like and take any liberties you wish.
-
-            When you are ready, hit the play button on the top left-hand corner of the screen.
-
-          </li>
-        </ul>
-      </div>
-    </div>
+<!-- pulse container -->
+<div class="container">
   <div class="pulser-container">
     <div class="pulser-wrap" id="pWrap">
       <div class="pulser"></div>
     </div>
   </div>
 </div>
-  <script type="text/javascript" color="255,255,255" count="200" zIndex="-1" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> 
-  <script src="meditate.js"></script> 
+
+</div>
+  <script type="text/javascript" color="255,255,255" count="200" opacity=".7" zIndex="-1" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
+  
+  <script type="text/javascript">
+  $(document).ready(function() {  
+  $(".dropdown-button").dropdown();
+  $('.button-collapse').sideNav();  
+  // instruction set to open on page load
+  
+
+  }); // closure
+  </script>
 </body>
 </html>
