--- a/public/memos/memos.html
+++ b/public/memos/memos.html
@@ -20,47 +20,59 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script>
   <!-- Custom CSS -->
   <link href="memos.css" rel="stylesheet" type="text/css">
-
 </head>
-<body>
+
+<body> 
+
   <!-- *********** NAVBAR *********** -->
 
-  <!-- NavBar Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
-      <li><a href="/meditate">Meditate</a></li>
-      <li><a href="/moodmap">Map</a></li>
-  </ul>
-  <ul class="side-nav" id="mobile-demo">
-    <li><a href="/members">MOODS</a></li>
-    <li><a href="/missions">MISSIONS</a></li>
-    <li><a href="/memos">MEMOS</a></li>
-    <li><a href="/meditate">MEDITATE</a></li>
-    <li><a href="/moodmap">MAP</a></li>
-    <li><a href="/about">ABOUT</a></li>
-    <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
-    <li><a href="/logout"><i class="material-icons">clear</i></a></li>
-    <li><a href="/"><i class="material-icons">blur_on</i></a></li>
-  </ul>
-  <nav>
-      <div class="nav-wrapper black">
-        <a href="/" class="brand-logo center"><i class="material-icons">dot</i></a>
+ <script> 
+$(document).ready(function(){
+$('.dropdown-button').dropdown(); 
+$(".button-collapse").sideNav();
+</script>
 
-        <ul id="nav-mobile-left" class="left hide-on-med-and-down">
-          <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons">menu</i></a></li>
-          <li><a href="/members">MOODS</a></li>
-          <li><a href="/missions">MISSIONS</a></li>
-          <li><a href="/memos">MEMOS</a></li>
-        </ul>
-        <ul id="nav-mobile-right" class="right hide-on-med-and-down">
-          <li><a href="/about">ABOUT</a></li>
-          <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
-          <li><a href="/logout"><i class="material-icons">clear</i></a></li>
-        </ul>
-        <!-- Mobile -->
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">dialpad</i></a>
-      </div>
-    </nav>
+  <!-- *********** NAVBAR *********** -->
 
+    <!-- *********** NAVBAR *********** -->
+
+    <!-- NavBar Dropdown Structure -->
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="/meditate">Meditate</a></li>
+        <li><a href="/moodmap">Map</a></li>
+        <li><a href="/meanings">Meanings</a></li>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
+      <li><a href="/members">MOODS</a></li>
+      <li><a href="/missions">MISSIONS</a></li>
+      <li><a href="/memos">MEMOS</a></li>
+      <li><a href="/meditate">MEDITATE</a></li>
+      <li><a href="/moodmap">MAP</a></li>
+      <li><a href="/about">ABOUT</a></li>
+      <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
+      <li><a href="/logout"><i class="material-icons">clear</i></a></li>
+      <li><a href="/"><i class="material-icons">blur_on</i></a></li>
+    </ul>
+    <nav>
+        <div class="nav-wrapper black">
+           <a href="/" class="brand-logo center">N E B U L \</a>
+
+          <ul id="nav-mobile-left" class="left hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons">menu</i></a></li>
+            <li><a href="/members">MOODS</a></li>
+            <li><a href="/missions">MISSIONS</a></li>
+            <li><a href="/memos">MEMOS</a></li>
+          </ul>
+          <ul id="nav-mobile-right" class="right hide-on-med-and-down">
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/login"><i class="material-icons">person_outline</i></a></li>
+            <li><a href="/logout"><i class="material-icons">clear</i></a></li>
+          </ul>
+          <!-- Mobile -->
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">dialpad</i></a>
+        </div>
+      </nav>
+  <br>
   <!-- *********** END NAVBAR *********** -->
   
  
@@ -95,7 +107,7 @@
       <div class="col s2"></div>
     </div>
     <div class="row">
-          <!-- <h4>YOUR MEMOS</h4> -->
+          <h4>YOUR MEMOS</h4>
           <div class="col s2"></div>
           <div class="col s8" id="activeMemos">
             <ul class="memoList">
@@ -108,8 +120,8 @@
 
 
 <!-- *********** FOOTER *********** -->
-  <footer class="footer page-footer">
-    <div class="footer-copyright">
+  
+    
       <div class="container text-center">
         © 2018 NEBUL\
       </div>
