to- space removed

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <img src="images/neb_fractal.png" class="responsive-img neb-mini img" id="image-tests">
         <ul id="headline-one"><h3>N E B · U · L \ </h3> <li><small><strong>ˈn e b y ə l ə</strong></small></li><small>
           <li class="definition">
-        a <span class="grey-text lighten-3">visually</span> captivating, personally <span class="blue-grey-text lighten-3">illuminating</span> approach to <br> <span class="white-text lighten-3">modern mood tracking</span></li><br>
+        a <span class="grey-text lighten-3">visually</span> captivating, personally <span class="blue-grey-text lighten-3">illuminating</span> approach to <span class="white-text lighten-3">modern mood tracking</span></li><br>
         <!-- <li class="definition">
         a unique cloud of gas and dust, visible in the night sky either as an enigmatic <span class="grey-text lighten-3">bright</span> patch or as a silhouette against other <span class="grey-text lighten-3">luminous matter.</span></li><br> -->
 
