--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <!-- NavBar Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="/meditate">Meditate</a></li>
+        <li><a href="/meditate">60 Sec</a></li>
         <li><a href="/moodmap">Map</a></li>
     </ul>
     <ul class="side-nav" id="mobile-demo">
