edits final - typo index

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
     <div class="row container white-text">   
       <span class="left-align">
         <ul id="staggered-test"><h5 class="grey-text lighten-3">FEATURES...</h5>
-        <li class style="transform: translateX(0px); opacity: 1;"><h6>Select your mood from a sprectrum of colors</h6> </li>
+        <li class style="transform: translateX(0px); opacity: 1;"><h6>Select your mood from a spectrum of colors</h6> </li>
         <li class style="transform: translateX(0px); opacity: 1;"><h6>Visualize your moods, memos, and missions in a sleek calendar display </h6></li>
         <li class style="transform: translateX(0px); opacity: 1;"><h6>Add activities you wish to incorporate in your daily routine </h6></li>
         </ul>
@@ -116,7 +116,7 @@
         <ul id="staggered-tests"><h5 class="grey-text lighten-3">...TO EXPLORE</h5>
         <li class style="transform: translateX(0px); opacity: 1;"><h6>Provide context by logging memos to accompany your daily moods</h6></li> 
         <li class style="transform: translateX(0px); opacity: 1;"><h6>Explore an interactive map of moods around the U.S. </h6></li>
-        <li class style="transform: translateX(0px); opacity: 1;"><h6>Let go of stress center yourself by visiting our meditation page</h6></li>
+        <li class style="transform: translateX(0px); opacity: 1;"><h6>Let go of stress & center yourself by visiting our meditation page</h6></li>
       </ul>
       </span>
     </div>
